rename some stuff, move some stuff around, less use of Optional, less single-field classes