@@ -22,35 +22,35 @@ public class GetOpenedUiHandlerTest {
         return String.join("\n", finalLines);
     }
 
-    private static @NotNull GetOpenedUiHandler handlerOfUnfilledUiWithOneItem(Invslot invslotForTest) {
+    private static @NotNull GetOpenedUiHandler handlerOfUnfilledUiWithOneItem(InventorySlot inventorySlotForTest) {
         ChestContainer chestContainer = new ChestContainer("Test UI", 1);
         chestContainer.populateGrid(cellPosition -> {
-            if (cellPosition.i == 0) {
-                return Optional.of(invslotForTest);
+            if (cellPosition.i() == 0) {
+                return Optional.of(inventorySlotForTest);
             }
             return Optional.empty();
         });
-        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.of(chestContainer));
+        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(chestContainer);
         return new GetOpenedUiHandler(finder);
     }
 
-    private static @NotNull GetOpenedUiHandler handlerOfUnfilledUiWithTwoItems(Invslot invslotForTest, Invslot invslotForTest2) {
+    private static @NotNull GetOpenedUiHandler handlerOfUnfilledUiWithTwoItems(InventorySlot inventorySlotForTest, InventorySlot inventorySlotForTest2) {
         ChestContainer chestContainer = new ChestContainer("Test UI", 1);
         chestContainer.populateGrid(cellPosition -> {
-            if (cellPosition.i == 0) {
-                return Optional.of(invslotForTest);
+            if (cellPosition.i() == 0) {
+                return Optional.of(inventorySlotForTest);
             }
-            if (cellPosition.i == 1) {
-                return Optional.of(invslotForTest2);
+            if (cellPosition.i() == 1) {
+                return Optional.of(inventorySlotForTest2);
             }
             return Optional.empty();
         });
-        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.of(chestContainer));
+        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(chestContainer);
         return new GetOpenedUiHandler(finder);
     }
 
     private static @NotNull GetOpenedUiHandler handlerOfAllBlankUiWithNoItem() {
-        Invslot blankItem = new Invslot(
+        InventorySlot blankItem = new InventorySlot(
                 " ",
                 "Black Stained Glass Pane",
                 Collections.emptyList(),
@@ -59,13 +59,13 @@ public class GetOpenedUiHandlerTest {
                 false
         );
         ChestContainer chestContainer = new ChestContainer("Test UI", 1);
-        chestContainer.populateGrid(cellPosition -> Optional.of(blankItem));
-        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.of(chestContainer));
+        chestContainer.populateGrid(_ -> Optional.of(blankItem));
+        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(chestContainer);
         return new GetOpenedUiHandler(finder);
     }
 
-    private static @NotNull GetOpenedUiHandler handlerOfAllBlankUiWithOneItem(Invslot invslotForTest) {
-        Invslot blankItem = new Invslot(
+    private static @NotNull GetOpenedUiHandler handlerOfAllBlankUiWithOneItem(InventorySlot inventorySlotForTest) {
+        InventorySlot blankItem = new InventorySlot(
                 " ",
                 "Black Stained Glass Pane",
                 Collections.emptyList(),
@@ -75,47 +75,46 @@ public class GetOpenedUiHandlerTest {
         );
         ChestContainer chestContainer = new ChestContainer("Test UI", 1);
         chestContainer.populateGrid(cellPosition -> {
-            if (cellPosition.i == 0) {
-                return Optional.of(invslotForTest);
+            if (cellPosition.i() == 0) {
+                return Optional.of(inventorySlotForTest);
             }
             return Optional.of(blankItem);
         });
-        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.of(chestContainer));
+        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(chestContainer);
         return new GetOpenedUiHandler(finder);
     }
 
     @Test
     void noChestContainer() {
-        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.empty());
+        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(null);
         GetOpenedUiHandler classUnderTest = new GetOpenedUiHandler(finder);
 
         GetOpenedUiHandler.GetOpenedUiRequest request =
                 new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-        Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+        String response = classUnderTest.getOpenedUiTemplateCall(request);
 
-        assertFalse(response.isPresent());
+        assertNull(response);
     }
 
     @Test
     void uiWithNoItem() {
         ChestContainer chestContainer = new ChestContainer("Test UI", 1);
-        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.of(chestContainer));
+        OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(chestContainer);
         GetOpenedUiHandler classUnderTest = new GetOpenedUiHandler(finder);
 
-        GetOpenedUiHandler.GetOpenedUiRequest request =
-                new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-        Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+        GetOpenedUiHandler.GetOpenedUiRequest request = new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
+        String response = classUnderTest.getOpenedUiTemplateCall(request);
 
         String expected = wrapperForUnfilledUi(Collections.emptyList());
-        assertTrue(response.isPresent());
-        assertEquals(expected, response.get().templateCall);
+        assertNotNull(response);
+        assertEquals(expected, response);
     }
 
     @Nested
     class TestsForNormalItem {
         @Test
         void uiWithMultipleRowsAndItems() {
-            Invslot invslotForTest = new Invslot(
+            InventorySlot inventorySlotForTest = new InventorySlot(
                     "§5Formatted Item",
                     "Item",
                     Arrays.asList("Line §a green", "Line §b blue"),
@@ -125,57 +124,56 @@ public class GetOpenedUiHandlerTest {
             );
             ChestContainer chestContainer = new ChestContainer("Test UI", 2);
             chestContainer.populateGrid(cellPosition -> {
-                if (Arrays.asList(0, 4, 17).contains(cellPosition.i)) {
-                    return Optional.of(invslotForTest);
+                if (Arrays.asList(0, 4, 17).contains(cellPosition.i())) {
+                    return Optional.of(inventorySlotForTest);
                 }
                 return Optional.empty();
             });
-            OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.of(chestContainer));
+            OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(chestContainer);
             GetOpenedUiHandler classUnderTest = new GetOpenedUiHandler(finder);
 
-            GetOpenedUiHandler.GetOpenedUiRequest request =
-                    new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-            Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+            GetOpenedUiHandler.GetOpenedUiRequest request = new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
+            String response = classUnderTest.getOpenedUiTemplateCall(request);
 
-            String expected = "{{UI|Test UI\n" +
-                    "|rows=2\n" +
-                    "|fill=false\n" +
-                    "|close=none\n" +
-                    "|arrow=none\n" +
-                    "|1, 1=Formatted Item, none, &5Formatted Item, Line &a green/Line &b blue\n" +
-                    "|1, 5=Formatted Item, none, &5Formatted Item, Line &a green/Line &b blue\n" +
-                    "|2, 9=Formatted Item, none, &5Formatted Item, Line &a green/Line &b blue\n" +
-                    "}}";
-            assertTrue(response.isPresent());
-            assertEquals(expected, response.get().templateCall);
+            String expected = """
+                    {{UI|Test UI
+                    |rows=2
+                    |fill=false
+                    |close=none
+                    |arrow=none
+                    |1, 1=Formatted Item, none, &5Formatted Item, Line &a green/Line &b blue
+                    |1, 5=Formatted Item, none, &5Formatted Item, Line &a green/Line &b blue
+                    |2, 9=Formatted Item, none, &5Formatted Item, Line &a green/Line &b blue
+                    }}""";
+            assertNotNull(response);
+            assertEquals(expected, response);
         }
 
         @Test
         void uiWithItemsShouldBeCorrectlyEscaped() {
-            Invslot invslotForTest = new Invslot(
+            InventorySlot inventorySlotForTest = new InventorySlot(
                     "Item",
                     "Item",
-                    Arrays.asList("Both comma , and backslash \\ are escaped."),
+                    List.of("Both comma , and backslash \\ are escaped."),
                     1,
                     false,
                     false
             );
-            GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+            GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
-            GetOpenedUiHandler.GetOpenedUiRequest request =
-                    new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-            Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+            GetOpenedUiHandler.GetOpenedUiRequest request = new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
+            String response = classUnderTest.getOpenedUiTemplateCall(request);
 
             String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Item, none, Item, Both comma \\, and backslash \\\\ are escaped."));
-            assertTrue(response.isPresent());
-            assertEquals(expected, response.get().templateCall);
+            assertNotNull(response);
+            assertEquals(expected, response);
         }
 
         @Nested
         class ExpectStackSizeIsShown {
             @Test
             void whenStackSizeIsMoreThanOne() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "Displayed Name",
                         "Item",
                         Collections.singletonList("Lore"),
@@ -183,15 +181,15 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Displayed Name; 2, none, Displayed Name, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -199,7 +197,7 @@ public class GetOpenedUiHandlerTest {
         class ExpectTitleAndTextAreShownAsSingleNone {
             @Test
             void whenDisplayedNameIsEmpty() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "",  // Empty displayed name
                         "Item",
                         Collections.singletonList("Lore that will not be displayed"),
@@ -207,15 +205,15 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=, none, none"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -223,7 +221,7 @@ public class GetOpenedUiHandlerTest {
         class ExpectTextIsShownAsNone {
             @Test
             void whenLoreIsEmpty() {
-                Invslot invslotUsingEmptyListAsLore = new Invslot(
+                InventorySlot inventorySlotUsingEmptyListAsLore = new InventorySlot(
                         "Displayed Name",
                         "Item",
                         Collections.emptyList(),  // Empty lore
@@ -231,7 +229,7 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                Invslot invslotUsingSingletonOfEmptyStringAsLore = new Invslot(
+                InventorySlot inventorySlotUsingSingletonOfEmptyStringAsLore = new InventorySlot(
                         "Displayed Name",
                         "Item",
                         Collections.singletonList(""),  // Empty lore
@@ -240,18 +238,18 @@ public class GetOpenedUiHandlerTest {
                         false
                 );
                 GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithTwoItems(
-                        invslotUsingEmptyListAsLore, invslotUsingSingletonOfEmptyStringAsLore);
+                        inventorySlotUsingEmptyListAsLore, inventorySlotUsingSingletonOfEmptyStringAsLore);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Arrays.asList(
                         "|1, 1=Displayed Name, none, Displayed Name, none",
                         "|1, 2=Displayed Name, none, Displayed Name, none"
                 ));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -259,7 +257,7 @@ public class GetOpenedUiHandlerTest {
         class ExpectDisplayedNameIsUsedAsItemName {
             @Test
             void when_notAlwaysUseMcItemName_and_itemIsCustomSkull() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "Custom Skull Name",
                         "Skull",
                         Collections.singletonList("Lore"),
@@ -267,20 +265,20 @@ public class GetOpenedUiHandlerTest {
                         true,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Custom Skull Name, none, Custom Skull Name, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
 
             @Test
             void when_alwaysUseMcItemName_and_itemIsCustomSkull() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "Custom Skull Name",
                         "Skull",
                         Collections.singletonList("Lore"),
@@ -288,15 +286,15 @@ public class GetOpenedUiHandlerTest {
                         true,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, true);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Custom Skull Name, none, Custom Skull Name, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -304,7 +302,7 @@ public class GetOpenedUiHandlerTest {
         class ExpectMinecraftItemNameIsUsedAsItemName {
             @Test
             void when_alwaysUseMcItemName_and_itemIsNotCustomSkull() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "Displayed Name",
                         "Item",
                         Collections.singletonList("Lore"),
@@ -312,15 +310,15 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, true);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Item, none, Displayed Name, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -328,7 +326,7 @@ public class GetOpenedUiHandlerTest {
         class ExpectEnchantedMinecraftItemNameIsUsedAsItemName {
             @Test
             void when_alwaysUseMcItemName_and_itemIsNotCustomSkull_and_itemIsEnchanted() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "Displayed Name",
                         "Item",
                         Collections.singletonList("Lore"),
@@ -336,15 +334,15 @@ public class GetOpenedUiHandlerTest {
                         false,
                         true
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, true);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Enchanted Item, none, Displayed Name, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
     }
@@ -356,16 +354,16 @@ public class GetOpenedUiHandlerTest {
             @Test
             void whenNotFillWithBlankByDefault() {
                 ChestContainer chestContainer = new ChestContainer("Test UI", 1);
-                OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.of(chestContainer));
+                OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(chestContainer);
                 GetOpenedUiHandler classUnderTest = new GetOpenedUiHandler(finder);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.emptyList());
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -374,29 +372,30 @@ public class GetOpenedUiHandlerTest {
             @Test
             void whenFillWithBlankByDefault() {
                 ChestContainer chestContainer = new ChestContainer("Test UI", 1);
-                OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(Optional.of(chestContainer));
+                OpenedChestContainerFinderStub finder = new OpenedChestContainerFinderStub(chestContainer);
                 GetOpenedUiHandler classUnderTest = new GetOpenedUiHandler(finder);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(true, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
-                String expected = "{{UI|Test UI\n" +
-                        "|rows=1\n" +
-                        "|close=none\n" +
-                        "|arrow=none\n" +
-                        "|1, 1= , none\n" +
-                        "|1, 2= , none\n" +
-                        "|1, 3= , none\n" +
-                        "|1, 4= , none\n" +
-                        "|1, 5= , none\n" +
-                        "|1, 6= , none\n" +
-                        "|1, 7= , none\n" +
-                        "|1, 8= , none\n" +
-                        "|1, 9= , none\n" +
-                        "}}";
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                String expected = """
+                        {{UI|Test UI
+                        |rows=1
+                        |close=none
+                        |arrow=none
+                        |1, 1= , none
+                        |1, 2= , none
+                        |1, 3= , none
+                        |1, 4= , none
+                        |1, 5= , none
+                        |1, 6= , none
+                        |1, 7= , none
+                        |1, 8= , none
+                        |1, 9= , none
+                        }}""";
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
     }
@@ -407,7 +406,7 @@ public class GetOpenedUiHandlerTest {
         class NotABlankItem {
             @Test
             void when_itemIsUnstainedGlassPane_withBlankDisplayedName() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         " ",
                         "Glass Pane",
                         Collections.singletonList("Lore"),
@@ -415,20 +414,20 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1= , none,  , Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
 
             @Test
             void when_itemIsStainedGlassPane_withNonBlankDisplayedName() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "Non-blank Name",
                         "Item",
                         Collections.singletonList("Lore"),
@@ -436,15 +435,15 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Non-blank Name, none, Non-blank Name, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -452,7 +451,7 @@ public class GetOpenedUiHandlerTest {
         class ExpectBlankItemDisplayedAsBlank {
             @Test
             void when_itemIsBlackStainedGlassPane_and_notFillWithBlankByDefault() {
-                Invslot blankItem = new Invslot(
+                InventorySlot blankItem = new InventorySlot(
                         " ",
                         "Black Stained Glass Pane",
                         Collections.singletonList("Lore"),
@@ -464,11 +463,11 @@ public class GetOpenedUiHandlerTest {
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Blank, none"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -480,15 +479,16 @@ public class GetOpenedUiHandlerTest {
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(true, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
-                String expected = "{{UI|Test UI\n" +
-                        "|rows=1\n" +
-                        "|close=none\n" +
-                        "|arrow=none\n" +
-                        "}}";
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                String expected = """
+                        {{UI|Test UI
+                        |rows=1
+                        |close=none
+                        |arrow=none
+                        }}""";
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -496,7 +496,7 @@ public class GetOpenedUiHandlerTest {
         class ExpectDisplayedAsBlankBracketColor {
             @Test
             void when_itemIsNonBlackStainedGlassPane_and_notFillWithBlankByDefault() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         " ",
                         "Red Stained Glass Pane",
                         Collections.singletonList("Lore"),
@@ -504,20 +504,20 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Blank (Red), none"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
 
             @Test
             void when_itemIsNonBlackStainedGlassPane_and_fillWithBlankByDefault() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         " ",
                         "Red Stained Glass Pane",
                         Collections.singletonList("Lore"),
@@ -525,20 +525,21 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfAllBlankUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfAllBlankUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(true, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
-                String expected = "{{UI|Test UI\n" +
-                        "|rows=1\n" +
-                        "|close=none\n" +
-                        "|arrow=none\n" +
-                        "|1, 1=Blank (Red), none\n" +
-                        "}}";
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                String expected = """
+                        {{UI|Test UI
+                        |rows=1
+                        |close=none
+                        |arrow=none
+                        |1, 1=Blank (Red), none
+                        }}""";
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
     }
@@ -551,7 +552,7 @@ public class GetOpenedUiHandlerTest {
         class NotAUniqueCloseItem {
             @Test
             void when_itemIsNonBarrier_withCloseText() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         CLOSE_TEXT,
                         "Not A Barrier",
                         Collections.singletonList("Lore"),
@@ -559,20 +560,20 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Close, none, &cClose, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
 
             @Test
             void when_itemIsBarrier_withNonCloseText() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "Not A Close Text",
                         "Barrier",
                         Collections.singletonList("Lore"),
@@ -580,20 +581,20 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Not A Close Text, none, Not A Close Text, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
 
             @Test
             void when_itemIsBarrier_withCloseText_andIsNotUnique() {
-                Invslot closeItem = new Invslot(
+                InventorySlot closeItem = new InventorySlot(
                         CLOSE_TEXT,
                         "Barrier",
                         Collections.singletonList("Lore"),
@@ -605,14 +606,14 @@ public class GetOpenedUiHandlerTest {
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Arrays.asList(
                         "|1, 1=Close, none, &cClose, Lore",
                         "|1, 2=Close, none, &cClose, Lore"
                 ));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -620,7 +621,7 @@ public class GetOpenedUiHandlerTest {
         class Expect_UseOfCloseParameter_AndNot_GridPositionParameter {
             @Test
             void when_itemIsBarrier_withCloseText_andIsUnique() {
-                Invslot closeItem = new Invslot(
+                InventorySlot closeItem = new InventorySlot(
                         CLOSE_TEXT,
                         "Barrier",
                         Collections.singletonList("Lore"),
@@ -628,7 +629,7 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                Invslot anotherItem = new Invslot(
+                InventorySlot anotherItem = new InventorySlot(
                         "Displayed Name",
                         "Item",
                         Collections.singletonList("Lore"),
@@ -640,17 +641,18 @@ public class GetOpenedUiHandlerTest {
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
-                String expected = "{{UI|Test UI\n" +
-                        "|rows=1\n" +
-                        "|fill=false\n" +
-                        "|close=1, 1\n" +
-                        "|arrow=none\n" +
-                        "|1, 2=Displayed Name, none, Displayed Name, Lore\n" +
-                        "}}";
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                String expected = """
+                        {{UI|Test UI
+                        |rows=1
+                        |fill=false
+                        |close=1, 1
+                        |arrow=none
+                        |1, 2=Displayed Name, none, Displayed Name, Lore
+                        }}""";
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
     }
@@ -663,7 +665,7 @@ public class GetOpenedUiHandlerTest {
         class NotAUniqueGoBackItem {
             @Test
             void when_itemIsNonArrow_withGoBackText() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         GO_BACK_TEXT,
                         "Not An Arrow",
                         Collections.singletonList("To Lobby"),
@@ -671,20 +673,20 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Go Back, none, &aGo Back, To Lobby"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
 
             @Test
             void when_itemIsArrow_withNonGoBackText() {
-                Invslot invslotForTest = new Invslot(
+                InventorySlot inventorySlotForTest = new InventorySlot(
                         "Not A Go-Back Text",
                         "Arrow",
                         Collections.singletonList("Lore"),
@@ -692,20 +694,20 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(invslotForTest);
+                GetOpenedUiHandler classUnderTest = handlerOfUnfilledUiWithOneItem(inventorySlotForTest);
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Collections.singletonList("|1, 1=Not A Go-Back Text, none, Not A Go-Back Text, Lore"));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
 
             @Test
             void when_itemIsArrow_withGoBackText_andIsNotUnique() {
-                Invslot closeItem = new Invslot(
+                InventorySlot closeItem = new InventorySlot(
                         GO_BACK_TEXT,
                         "Arrow",
                         Collections.singletonList("To Lobby"),
@@ -717,14 +719,14 @@ public class GetOpenedUiHandlerTest {
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
                 String expected = wrapperForUnfilledUi(Arrays.asList(
                         "|1, 1=Go Back, none, &aGo Back, To Lobby",
                         "|1, 2=Go Back, none, &aGo Back, To Lobby"
                 ));
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
 
@@ -732,7 +734,7 @@ public class GetOpenedUiHandlerTest {
         class Expect_UseOfArrowAndGoBackParameters_AndNot_GridPositionParameter {
             @Test
             void when_itemIsArrow_withGoBackText_andIsUnique() {
-                Invslot closeItem = new Invslot(
+                InventorySlot closeItem = new InventorySlot(
                         GO_BACK_TEXT,
                         "Arrow",
                         Collections.singletonList("To Lobby"),
@@ -740,7 +742,7 @@ public class GetOpenedUiHandlerTest {
                         false,
                         false
                 );
-                Invslot anotherItem = new Invslot(
+                InventorySlot anotherItem = new InventorySlot(
                         "Displayed Name",
                         "Item",
                         Collections.singletonList("Lore"),
@@ -752,18 +754,19 @@ public class GetOpenedUiHandlerTest {
 
                 GetOpenedUiHandler.GetOpenedUiRequest request =
                         new GetOpenedUiHandler.GetOpenedUiRequest(false, false);
-                Optional<GetOpenedUiHandler.GetOpenedUiResponse> response = classUnderTest.getOpenedUiTemplateCall(request);
+                String response = classUnderTest.getOpenedUiTemplateCall(request);
 
-                String expected = "{{UI|Test UI\n" +
-                        "|rows=1\n" +
-                        "|fill=false\n" +
-                        "|close=none\n" +
-                        "|arrow=1, 1\n" +
-                        "|goback=To Lobby\n" +
-                        "|1, 2=Displayed Name, none, Displayed Name, Lore\n" +
-                        "}}";
-                assertTrue(response.isPresent());
-                assertEquals(expected, response.get().templateCall);
+                String expected = """
+                        {{UI|Test UI
+                        |rows=1
+                        |fill=false
+                        |close=none
+                        |arrow=1, 1
+                        |goback=To Lobby
+                        |1, 2=Displayed Name, none, Displayed Name, Lore
+                        }}""";
+                assertNotNull(response);
+                assertEquals(expected, response);
             }
         }
     }
